# core-synapse

./: README.md  build.sh
.github/workflows/: build-push-images.yml
api/: Dockerfile  app.py  pyproject.toml  requirements.txt
api/src/: config.py  log.py  schema.py
demo/: demo.py
models/sentiment-analysis/: Dockerfile  app.py  run.sh
models/sentiment_analysis/: app.py  pyproject.toml  requirements.txt
models/sentiment_analysis/src/: log.py
models/spam-detector/: Dockerfile  app.py  pyproject.toml  run.sh
models/spam_detector/: Dockerfile  app.py
scripts/: build.sh  host_local.ps1
ui/: app.py  pyproject.toml  requirements.txt
ui/static/: styles.css
ui/templates/: index.html
