[tool.poetry]
name = "spam-detector"
version = "0.1.0"
description = ""
authors = ["devscouse <rob-jwebster@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
